--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,15 @@
         @apply font-poppins font-normal;
     }
 }
+
+@layer utilities {
+
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none; 
+        scrollbar-width: none;
+  }
+}
